src/test/resources/semantic/custom/accept/parenExpression.ul
void main() {
}

int foo() {
    int foo;
    float bar;

    bar = (5.0);
    bar = ((((5.0))));
    return ((foo));
}
