src/test/resources/semantic/custom/reject/assignmentToWrongTypeLiteral.ul
void main() {
}

void foo() {
    int foo;
    foo = "hello";
}
